# tuix

./: .floo  Cargo.toml
application/: Cargo.toml
application/src/: application.rs  glutin_cfg.rs  keyboard.rs  lib.rs  wgpu_cfg.rs  window.rs
baseview/: Cargo.toml
core/: Cargo.toml
core/src/events/: event_handler.rs  event_manager.rs  widget.rs  window_description.rs
core/src/systems/: draw_system.rs  hover_system.rs
core/src/widgets/: mod.rs
core/src/widgets/audio_widgets/: control_knob.rs  grid.rs
core/src/widgets/inputs/: textbox.rs
examples/: add_remove.rs  animation.rs  basic.rs  calculator.rs  counter.rs  hello_gui.rs  image.rs  inspector.rs  layout_test.rs  menus.rs  panel_animated.rs  panels.rs  tabs.rs  text_input.rs  tic_tac_toe.rs  treeview.rs  widget_gallery.rs  widgets.rs
glutin/: Cargo.toml
glutin/src/: application.rs  lib.rs
src/: lib.rs
wgpu/: Cargo.toml
wgpu/src/: application.rs  keyboard.rs  lib.rs  window.rs
winit/: Cargo.toml
winit/src/: application.rs  lib.rs  window.rs
