[package]
name = "tuix_application"
version = "0.1.0"
authors = ["Casey Bailey"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/geom3trik/tuix"

[features]
default = ["wgpu"]
wgpu = []
glutin = []

[dependencies]
femtovg = { git = "https://github.com/adamnemecek/femtovg", branch = "master"}
keyboard-types = { version = "0.5", default-features = false }
tuix_core = { path = "../core" }
winit = "0.24.0"
resource = "0.5.0"

[dev-dependencies]
log = "0.4.14"
env_logger = "0.8.3"
